components/FloatingBlob/FloatingBlob.module.css
.blob {
  position: absolute;
  opacity: 0.5;
  width: 20vw;
  aspect-ratio: 1/1;
  animation: animate 10s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite alternate forwards;
  filter: blur(40px);
  z-index: -1;
  background: linear-gradient(
    47deg,
    rgb(240, 143, 39) 21%,
    rgb(29, 185, 209) 67%,
    rgb(105, 31, 225) 81%
  );

  /*  Optional  */
  /*   box-shadow: inset 50px 50px 17px 0px #ff588b,
      inset 100px 100px 17px 0px #66319f; */
}

@keyframes animate {
  0% {
    translate: 375% -20%;
    border-radius: 60% 40% 30% 70% / 100% 85% 92% 74%;
  }
  50% {
    translate: 375% -20%;
    border-radius: 20% 71% 47% 70% / 81% 15% 22% 54%;
    rotate: 41deg;
    scale: 1.15;
  }
  100% {
    translate: 375% -20%;
    border-radius: 100% 75% 92% 74% / 60% 80% 30% 70%;
    rotate: -60deg;
    scale: 1.05;
  }
}

